<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<ImageView
			android:id="@+id/imageIV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/load_image"
				android:onClick="load"/>
			<Button
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/remove_image"
				android:onClick="remove"/>
		</LinearLayout>
		<EditText
			android:id="@+id/textET"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/enter_task"
			android:inputType="textMultiLine"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:text="@string/cost_"
				android:textColor="@color/colorText"
				android:textSize="20sp"
				android:gravity="center"/>
			<EditText
				android:id="@+id/costET"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/cost"
				android:inputType="number"/>
		</LinearLayout>
		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<RadioButton
				android:id="@+id/oneRB"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/one_q"
				android:onClick="mode"
				android:checked="true"/>
			<RadioButton
				android:id="@+id/manyRB"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/many_q"
				android:onClick="mode"/>
			<RadioButton
				android:id="@+id/shortRB"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/short_q"
				android:onClick="mode"/>
			<RadioButton
				android:id="@+id/longRB"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/long_q"
				android:onClick="mode"/>
		</RadioGroup>
		<LinearLayout
			android:id="@+id/ansLL"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				android:layout_width="0sp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/save"
				android:onClick="save"/>
			<Button
				android:layout_width="0sp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/delete"
				android:onClick="delete"/>
			<Button
				android:layout_width="0sp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/cancel"
				android:onClick="cancel"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>