<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:text="@string/auth"
		android:textSize="30sp"
		android:background="@color/colorPrimary"
		android:textColor="#FFFFFF"
		android:textStyle="bold"/>
	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<RadioButton
			android:id="@+id/signInRB"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_in"
			android:checked="true"
			android:onClick="in"/>
		<RadioButton
			android:id="@+id/signUpRB"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_up"
			android:onClick="up"/>
	</RadioGroup>
	<LinearLayout
		android:id="@+id/inputLL"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<EditText
			android:id="@+id/loginET"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login"/>
		<EditText
			android:id="@+id/passwordET"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password"
			android:inputType="textPassword"/>
	</LinearLayout>
	<Button
		android:id="@+id/signBT"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/sign_in"/>
</LinearLayout>