<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ImageView
		android:id="@+id/imageIV"
		android:layout_width="match_parent"
		android:layout_height="300dp"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/load_image"
			android:onClick="load"/>
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/remove_image"
			android:onClick="remove"/>
	</LinearLayout>
	<TextView
		android:id="@+id/loginTV"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="30sp"
		android:textColor="@color/colorText"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorText"
			android:textSize="20sp"
			android:text="@string/name"/>
		<EditText
			android:id="@+id/nameET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorText"
			android:textSize="20sp"
			android:text="@string/surname"/>
		<EditText
			android:id="@+id/surnameET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorText"
			android:textSize="20sp"
			android:text="@string/email"/>
		<EditText
			android:id="@+id/emailET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:inputType="textEmailAddress"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorText"
			android:textSize="20sp"
			android:text="@string/phone_number"/>
		<EditText
			android:id="@+id/phoneNumberET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:inputType="phone"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorText"
			android:textSize="20sp"
			android:text="@string/old_password"/>
		<EditText
			android:id="@+id/oldPasswordET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:inputType="textPassword"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="@color/colorText"
			android:textSize="20sp"
			android:text="@string/new_password"/>
		<EditText
			android:id="@+id/newPasswordET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:inputType="textPassword"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="bottom"
		android:orientation="horizontal">
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/save"
			android:onClick="save"/>
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cancel"
			android:onClick="cancel"/>
	</LinearLayout>
</LinearLayout>