<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<HorizontalScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:id="@+id/counterLL"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="horizontal"/>
	</HorizontalScrollView>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:id="@+id/taskTV"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/colorText"/>
			<LinearLayout
				android:id="@+id/choiceLL"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/save"
				android:onClick="save"/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/prev"
					android:onClick="prev"/>
				<Button
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/next"
					android:onClick="next"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>